--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@quasar/app": "^3.2.9",
+    "@quasar/extras": "^1.12.4",
+    "babel-plugin-transform-imports": "^2.0.0",
     "core-js": "^3.6.5",
+    "quasar": "^2.0.0",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
@@ -38,9 +42,10 @@
     "eslint-plugin-vue": "^7.0.0",
     "lint-staged": "^9.5.0",
     "prettier": "^2.2.1",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
+    "sass": "1.32.12",
+    "sass-loader": "^10.1.0",
     "typescript": "~4.1.5",
+    "vue-cli-plugin-quasar": "~4.0.4",
     "vue-jest": "^5.0.0-0"
   },
   "gitHooks": {
