--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
 	"dependencies": {
 		"@quasar/app": "^3.2.9",
 		"@quasar/extras": "^1.12.4",
+		"axios": "^0.25.0",
 		"babel-plugin-transform-imports": "^2.0.0",
 		"core-js": "^3.6.5",
 		"quasar": "^2.0.0",
 		"register-service-worker": "^1.7.1",
 		"vue": "^3.0.0",
+		"vue-axios": "^3.4.0",
 		"vue-router": "^4.0.0-0",
 		"vuex": "^4.0.0-0"
 	},
