--- a/package.json
+++ b/package.json
@@ -13,35 +13,35 @@
 		"lint": "vue-cli-service lint"
 	},
 	"dependencies": {
-		"@quasar/app": "^3.2.9",
+		"@quasar/app": "^3.3.2",
 		"@quasar/extras": "^1.12.4",
 		"axios": "^0.25.0",
 		"babel-plugin-transform-imports": "^2.0.0",
 		"core-js": "^3.6.5",
-		"quasar": "^2.0.0",
-		"register-service-worker": "^1.7.1",
-		"vue": "^3.0.0",
+		"quasar": "^2.5.0",
+		"register-service-worker": "^1.7.2",
+		"vue": "^3.2.29",
 		"vue-axios": "^3.4.0",
-		"vue-router": "^4.0.0-0",
-		"vuex": "^4.0.0-0"
+		"vue-router": "^4.0.12",
+		"vuex": "^4.0.2"
 	},
 	"devDependencies": {
 		"@types/jest": "^24.0.19",
 		"@typescript-eslint/eslint-plugin": "^4.18.0",
 		"@typescript-eslint/parser": "^4.18.0",
-		"@vue/cli-plugin-babel": "~4.5.0",
-		"@vue/cli-plugin-e2e-cypress": "~4.5.0",
-		"@vue/cli-plugin-eslint": "~4.5.0",
-		"@vue/cli-plugin-pwa": "~4.5.0",
-		"@vue/cli-plugin-router": "~4.5.0",
-		"@vue/cli-plugin-typescript": "~4.5.0",
-		"@vue/cli-plugin-unit-jest": "~4.5.0",
-		"@vue/cli-plugin-vuex": "~4.5.0",
-		"@vue/cli-service": "~4.5.0",
+		"@vue/cli-plugin-babel": "~4.5.15",
+		"@vue/cli-plugin-e2e-cypress": "~4.5.15",
+		"@vue/cli-plugin-eslint": "~4.5.15",
+		"@vue/cli-plugin-pwa": "~4.5.15",
+		"@vue/cli-plugin-router": "~4.5.15",
+		"@vue/cli-plugin-typescript": "~4.5.15",
+		"@vue/cli-plugin-unit-jest": "~4.5.15",
+		"@vue/cli-plugin-vuex": "~4.5.15",
+		"@vue/cli-service": "~4.5.15",
 		"@vue/compiler-sfc": "^3.0.0",
 		"@vue/eslint-config-prettier": "^6.0.0",
 		"@vue/eslint-config-typescript": "^7.0.0",
-		"@vue/test-utils": "^2.0.0-0",
+		"@vue/test-utils": "^2.0.0-rc.18",
 		"eslint": "^6.7.2",
 		"eslint-plugin-prettier": "^3.3.1",
 		"eslint-plugin-vue": "^7.0.0",
@@ -49,9 +49,9 @@
 		"prettier": "^2.2.1",
 		"sass": "1.32.12",
 		"sass-loader": "^10.1.0",
-		"typescript": "~4.1.5",
+		"typescript": "~4.1.6",
 		"vue-cli-plugin-quasar": "~4.0.4",
-		"vue-jest": "^5.0.0-0"
+		"vue-jest": "^5.0.0-alpha.10"
 	},
 	"gitHooks": {
 		"pre-commit": "lint-staged"
