--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"node": ">=16.10.0"
 	},
 	"scripts": {
-		"serve": "vue-cli-service serve",
+		"serve": "vue-cli-service serve --port 8080",
 		"build": "vue-cli-service build",
 		"test:unit": "vue-cli-service test:unit",
 		"test:e2e": "vue-cli-service test:e2e",
@@ -37,7 +37,7 @@
 		"@vue/cli-plugin-typescript": "~4.5.15",
 		"@vue/cli-plugin-unit-jest": "~4.5.15",
 		"@vue/cli-plugin-vuex": "~4.5.15",
-		"@vue/cli-service": "~4.5.15",
+		"@vue/cli-service": "^4.5.15",
 		"@vue/compiler-sfc": "^3.2.30",
 		"@vue/eslint-config-prettier": "^6.0.0",
 		"@vue/eslint-config-typescript": "^7.0.0",
