--- a/package.json
+++ b/package.json
@@ -13,44 +13,44 @@
 		"lint": "vue-cli-service lint"
 	},
 	"dependencies": {
-		"@quasar/app": "^3.3.2",
-		"@quasar/extras": "^1.12.5",
-		"axios": "^0.25.0",
+		"@quasar/app": "^3.3.3",
+		"@quasar/extras": "^1.14.1",
+		"axios": "^0.27.2",
 		"babel-plugin-transform-imports": "^2.0.0",
-		"core-js": "^3.6.5",
-		"quasar": "^2.5.3",
+		"core-js": "^3.23.3",
+		"quasar": "^2.7.4",
 		"register-service-worker": "^1.7.2",
-		"vue": "^3.2.30",
-		"vue-axios": "^3.4.0",
-		"vue-router": "^4.0.12",
+		"vue": "^3.2.37",
+		"vue-axios": "^3.4.1",
+		"vue-router": "^4.0.16",
 		"vuex": "^4.0.2"
 	},
 	"devDependencies": {
-		"@types/jest": "^24.9.1",
-		"@typescript-eslint/eslint-plugin": "^4.33.0",
-		"@typescript-eslint/parser": "^4.33.0",
-		"@vue/cli-plugin-babel": "~4.5.15",
-		"@vue/cli-plugin-e2e-cypress": "~4.5.15",
-		"@vue/cli-plugin-eslint": "~4.5.15",
-		"@vue/cli-plugin-pwa": "~4.5.15",
-		"@vue/cli-plugin-router": "~4.5.15",
-		"@vue/cli-plugin-typescript": "~4.5.15",
-		"@vue/cli-plugin-unit-jest": "~4.5.15",
-		"@vue/cli-plugin-vuex": "~4.5.15",
-		"@vue/cli-service": "^4.5.15",
-		"@vue/compiler-sfc": "^3.2.30",
-		"@vue/eslint-config-prettier": "^6.0.0",
-		"@vue/eslint-config-typescript": "^7.0.0",
-		"@vue/test-utils": "^2.0.0-rc.17",
-		"eslint": "^6.8.0",
-		"eslint-plugin-prettier": "^3.4.1",
-		"eslint-plugin-vue": "^7.0.0",
+		"@types/jest": "^27.5.2",
+		"@typescript-eslint/eslint-plugin": "^5.30.0",
+		"@typescript-eslint/parser": "^5.30.0",
+		"@vue/cli-plugin-babel": "~5.0.6",
+		"@vue/cli-plugin-e2e-cypress": "~5.0.6",
+		"@vue/cli-plugin-eslint": "~5.0.6",
+		"@vue/cli-plugin-pwa": "~5.0.6",
+		"@vue/cli-plugin-router": "~5.0.6",
+		"@vue/cli-plugin-typescript": "~5.0.6",
+		"@vue/cli-plugin-unit-jest": "~5.0.6",
+		"@vue/cli-plugin-vuex": "~5.0.6",
+		"@vue/cli-service": "^5.0.6",
+		"@vue/compiler-sfc": "^3.2.37",
+		"@vue/eslint-config-prettier": "^7.0.0",
+		"@vue/eslint-config-typescript": "^11.0.0",
+		"@vue/test-utils": "^2.0.1",
+		"eslint": "^8.18.0",
+		"eslint-plugin-prettier": "^4.1.0",
+		"eslint-plugin-vue": "^9.1.1",
 		"lint-staged": "^9.5.0",
-		"prettier": "^2.5.1",
+		"prettier": "^2.7.1",
 		"sass": "1.32.12",
 		"sass-loader": "^10.1.0",
-		"typescript": "~4.1.6",
-		"vue-cli-plugin-quasar": "~4.0.4",
+		"typescript": "~4.7.4",
+		"vue-cli-plugin-quasar": "~5.0.1",
 		"vue-jest": "^5.0.0-alpha.10"
 	},
 	"gitHooks": {
