--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"register-service-worker": "^1.7.2",
 		"vue": "^3.2.37",
 		"vue-axios": "^3.4.1",
-		"vue-router": "^4.0.16",
+		"vue-router": "^4.0.3",
 		"vuex": "^4.0.2"
 	},
 	"devDependencies": {
@@ -41,17 +41,22 @@
 		"@vue/compiler-sfc": "^3.2.37",
 		"@vue/eslint-config-prettier": "^7.0.0",
 		"@vue/eslint-config-typescript": "^11.0.0",
-		"@vue/test-utils": "^2.0.1",
+		"@vue/test-utils": "^2.0.0-0",
+		"@vue/vue3-jest": "^28.0.1",
+		"babel-jest": "^28.1.2",
+		"cypress": "^10.3.0",
 		"eslint": "^8.18.0",
+		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.1.0",
 		"eslint-plugin-vue": "^9.1.1",
-		"lint-staged": "^9.5.0",
+		"jest": "^28.1.2",
+		"lint-staged": "^13.0.3",
 		"prettier": "^2.7.1",
-		"sass": "1.32.12",
-		"sass-loader": "^10.1.0",
+		"sass": "1.53.0",
+		"sass-loader": "^10.3.0",
+		"ts-jest": "^28.0.5",
 		"typescript": "~4.7.4",
-		"vue-cli-plugin-quasar": "~5.0.1",
-		"vue-jest": "^5.0.0-alpha.10"
+		"vue-cli-plugin-quasar": "~5.0.1"
 	},
 	"gitHooks": {
 		"pre-commit": "lint-staged"
