--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,26 @@ orbs:
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+
+jobs:
+  test:
+    # This is the node version to use for the `cimg/node` tag
+    # Relevant tags can be found on the CircleCI Developer Hub
+    # https://circleci.com/developer/images/image/cimg/node
+    docker:
+      - image: cimg/node:16.10
+    # If you are using yarn, change the line below from "npm" to "yarn"
+    steps:
+      - checkout
+      - node/install-packages:
+          pkg-manager: yarn
+      - run: test:unit
+
 workflows:
   sample: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
     jobs:
-      - node/test:unit:
+      - node/test:
           # This is the node version to use for the `cimg/node` tag
           # Relevant tags can be found on the CircleCI Developer Hub
           # https://circleci.com/developer/images/image/cimg/node
