--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - checkout
       - node/install-packages:
           pkg-manager: yarn
-      - run: test:unit
+      - run: yarn test:unit
 
 workflows:
   sample: # This is the name of the workflow, feel free to change it to better match your workflow.
