--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	},
 	"dependencies": {
 		"@quasar/app": "^3.3.3",
-		"@quasar/extras": "^1.14.1",
+		"@quasar/extras": "^1.14.2",
 		"axios": "^0.27.2",
 		"babel-plugin-transform-imports": "^2.0.0",
 		"core-js": "^3.23.3",
@@ -41,20 +41,20 @@
 		"@vue/compiler-sfc": "^3.2.37",
 		"@vue/eslint-config-prettier": "^7.0.0",
 		"@vue/eslint-config-typescript": "^11.0.0",
-		"@vue/test-utils": "^2.0.0-0",
-		"@vue/vue3-jest": "^28.0.1",
-		"babel-jest": "^28.1.2",
+		"@vue/test-utils": "^2.0.0",
+		"@vue/vue3-jest": "^27.0.0",
+		"babel-jest": "^27.5.1",
 		"cypress": "^10.3.0",
 		"eslint": "^8.18.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.1.0",
 		"eslint-plugin-vue": "^9.1.1",
-		"jest": "^28.1.2",
+		"jest": "^27.5.1",
 		"lint-staged": "^13.0.3",
 		"prettier": "^2.7.1",
 		"sass": "1.53.0",
 		"sass-loader": "^10.3.0",
-		"ts-jest": "^28.0.5",
+		"ts-jest": "^27.1.5",
 		"typescript": "~4.7.4",
 		"vue-cli-plugin-quasar": "~5.0.1"
 	},
