--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,22 +5,40 @@ version: 2.1
 # See: https://circleci.com/docs/2.0/orb-intro/
 orbs:
   node: circleci/node@4.7
+  cypress: cypress-io/cypress@1
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 
 jobs:
-  test-unit:
-    docker:
-      - image: cimg/node:16.10
+  install:
+    name: Install Dependencies
     steps:
       - checkout
       - node/install-packages:
           pkg-manager: yarn
+  test-unit:
+    name: Run Unit Tests
+    requires:
+      - install
+    docker:
+      - image: cimg/node:16.10
+    steps:
       - run: yarn test:unit
+  cypress/run:
+    name: Run e2e tests
+    requires:
+      - install
+    record: true # record results on Cypress Dashboard
+    parallel: true # split all specs across machines
+    parallelism: 4 # use 4 CircleCI machines to finish quickly
+    group: 'all tests' # name this group "all tests" on the dashboard
+    start: 'npm start' # start server before running tests
 
 workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
+  build-and-test: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
     jobs:
+      - install
       - test-unit
+      - cypress/run
