--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ orbs:
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 
 jobs:
-  install:
+  yarn-install:
     docker:
       - image: cimg/node:16.10
     steps:
@@ -40,7 +40,7 @@ jobs:
       - run: yarn test:unit
   test-e2e:
     docker:
-      - image: cypress/base:14.16.0
+      - image: cypress/base:16.10.0
         environment:
             ## this enables colors in the output
             TERM: xterm
@@ -60,11 +60,11 @@ workflows:
   build-and-test: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
     jobs:
-      - install
+      - yarn-install
       - test-unit:
           requires:
-              - install
+              - yarn-install
       - test-e2e:
           requires:
-              - install
+              - yarn-install
 
