--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,5 +71,5 @@ workflows:
           parallel: true # split all specs across machines
           parallelism: 4 # use 4 CircleCI machines to finish quickly
           group: 'all tests' # name this group "all tests" on the dashboard
-          start: 'yarn start' # start server before running tests
+          start: 'yarn serve' # start server before running tests
 
