--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,12 @@ orbs:
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-
+executors:
+  cypress:
+    docker:
+      - image: 'cypress/base:14.16.0'
+    environment:
+      CYPRESS_RECORD_KEY: 747eced2-a43e-4eb4-9e1e-fcdaf7d57398
 jobs:
   install:
     docker:
@@ -44,7 +49,6 @@ jobs:
         environment:
             ## this enables colors in the output
             TERM: xterm
-            CYPRESS_RECORD_KEY: 747eced2-a43e-4eb4-9e1e-fcdaf7d57398
     working_directory: ~/app
     steps:
       - checkout
@@ -64,8 +68,10 @@ workflows:
       - cypress/install:
           yarn: true
           build: yarn build # run a custom app build step
+          executor: cypress
       - cypress/run:
           yarn: true
+          executor: cypress
           requires:
             - cypress/install
           record: true # record results on Cypress Dashboard
