--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"eslint-plugin-prettier": "^4.1.0",
 		"eslint-plugin-vue": "^9.1.1",
 		"jest": "^27.5.1",
+		"jest-junit": "^14.0.0",
 		"lint-staged": "^13.0.3",
 		"prettier": "^2.7.1",
 		"sass": "1.53.0",
