--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,4 +85,7 @@ workflows:
           parallelism: 4 # use 4 CircleCI machines to finish quickly
           group: 'all tests' # name this group "all tests" on the dashboard
           start: 'yarn serve' # start server before running tests
+          post-steps:
+            - store_test_results:
+                path: cypress/results
 
