--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"lint": "vue-cli-service lint"
 	},
 	"dependencies": {
+		"@cypress/webpack-preprocessor": "^5.12.0",
 		"@quasar/app": "^3.3.3",
 		"@quasar/extras": "^1.14.2",
 		"axios": "^0.27.2",
