--- a/package.json
+++ b/package.json
@@ -24,25 +24,26 @@
 		"vue": "^3.2.37",
 		"vue-axios": "^3.4.1",
 		"vue-router": "^4.0.16",
-		"vuex": "^4.0.2"
+		"vuex": "^4.0.2",
+		"webpack-manifest-plugin": "^5.0.0"
 	},
 	"devDependencies": {
 		"@types/jest": "^27.5.2",
-		"@typescript-eslint/eslint-plugin": "^5.30.0",
-		"@typescript-eslint/parser": "^5.30.0",
-		"@vue/cli-plugin-babel": "~5.0.6",
-		"@vue/cli-plugin-e2e-cypress": "~5.0.6",
-		"@vue/cli-plugin-eslint": "~5.0.6",
-		"@vue/cli-plugin-pwa": "~5.0.6",
-		"@vue/cli-plugin-router": "~5.0.6",
-		"@vue/cli-plugin-typescript": "~5.0.6",
-		"@vue/cli-plugin-unit-jest": "~5.0.6",
-		"@vue/cli-plugin-vuex": "~5.0.6",
-		"@vue/cli-service": "^5.0.6",
+		"@typescript-eslint/eslint-plugin": "^5.30.5",
+		"@typescript-eslint/parser": "^5.30.5",
+		"@vue/cli-plugin-babel": "~5.0.8",
+		"@vue/cli-plugin-e2e-cypress": "~5.0.8",
+		"@vue/cli-plugin-eslint": "~5.0.8",
+		"@vue/cli-plugin-pwa": "~5.0.8",
+		"@vue/cli-plugin-router": "~5.0.8",
+		"@vue/cli-plugin-typescript": "~5.0.8",
+		"@vue/cli-plugin-unit-jest": "~5.0.8",
+		"@vue/cli-plugin-vuex": "~5.0.8",
+		"@vue/cli-service": "^5.0.8",
 		"@vue/compiler-sfc": "^3.2.37",
 		"@vue/eslint-config-prettier": "^7.0.0",
 		"@vue/eslint-config-typescript": "^11.0.0",
-		"@vue/test-utils": "^2.0.0",
+		"@vue/test-utils": "^2.0.2",
 		"@vue/vue3-jest": "^27.0.0",
 		"babel-jest": "^27.5.1",
 		"cypress": "^10.3.0",
