--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
 		"lint": "vue-cli-service lint"
 	},
 	"dependencies": {
+		"@cypress/code-coverage": "^3.10.0",
 		"@cypress/webpack-preprocessor": "^5.12.0",
 		"@quasar/app": "^3.3.3",
 		"@quasar/extras": "^1.14.2",
 		"axios": "^0.27.2",
 		"babel-plugin-transform-imports": "^2.0.0",
 		"core-js": "^3.23.3",
+		"nyc": "^15.1.0",
 		"quasar": "^2.7.4",
 		"register-service-worker": "^1.7.2",
 		"vue": "^3.2.37",
